# regs-checker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LEADERSHIP_STRUCTURE.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  SETUP_ISSUES_AND_OPTIMIZATIONS.md  alembic.ini  architecture.md  completed_tasks.md  corrections.csv  pyproject.toml  setup.ps1  setup.sh  start.ps1  start.py  tasks.md
.github/workflows/: ci.yml
Law Card Copy/: README.md
Law Card Copy/components/: LawCard.jsx
Law Card Copy/css/: lawcard-tokens.css
Law Card Copy/data/: constants-extract.js
_archived/docker/: Dockerfile
alembic/: env.py
archive/: Initial Project Plan.md  README.md  handoff-2026-03-18.md  handoff-2026-04-05.md  policy_navigator_urls.csv  regs-checker-developer-handoff.docx
backups/: policy_navigator_backup_20260310.sql  regs_checker_backup_20260310.sql
config/: agent_models.json  agent_type_map.json  url_fixes.yaml
data/: dim_actor_types.csv  dim_ai_scopes.csv  dim_jurisdictions.csv  dim_legislative_statuses.csv  dim_requirement_types.csv  dim_sources.csv  fact_laws.csv  flagged_missing_orrick.md  internal_compliance_tracking.csv  map_law_requirements.csv  map_law_scopes.csv  summary.csv
docker/: Dockerfile  dagster.yaml  docker-compose.yml
docs/: AGENT_EXTRACTION_STRATEGY.md  NORMALIZATION_VOCABULARY_RATIFICATION_PLAN.md  PRODUCT_STRATEGY.md  README.md  STRATEGY_ENGINEERING_PLAN.md  auth_posture.md  data_dictionary.md  ea1_gold_set_plan.md  engineering_strategy_v3.md  extraction_run_remediation_plan.md  law_card_dashboard_plan.md  law_card_decisions.md  law_card_design_rules.md  missing_laws_ingest_queue.csv  output_taxonomy_explained.md  phase0_completion_log.md  phase1_completion_log.md  phase2_completion_log.md  phase3_completion_log.md  pipeline_rebuild_plan.md  pn_asks_response.md  product_review_remediation_plan.md  production_readiness_review.md  qa8_qa9_phased_plan.md  qa_r2_run_review.md  r1_findings_supplement.md  r2_r3_findings.md  remediation_plan.md  run1_unified_plan.md  taxonomy_dev_plan.md  taxonomy_strategy_summary.md
output/: law_fulltext_report.csv  law_tag_categories.json  law_tag_categories.md  laws.json  laws_fields.md
prompts/: README.md  ambiguity.yml  compliance_mechanism.yml  definition_actor.yml  dependency_graph.yml  obligation.yml  preemption.yml  rights_protection.yml  threshold_exception.yml
scripts/: apply_pending_migrations.sql  debug_pdf_tables.py  fix_csv_titles.py  fix_mismatched_sources.py  reset_pipeline.py
static/: ai_law_tracker.csv  ai_law_tracker_QA_report.md  iapp_law_tracker.csv  iapp_law_tracker_QA.md  lawcard.js
templates/: analytics.html  concepts.html  dashboard.html  law_card.html  laws.html  layout.html  models.html  review.html  triage.html
tests/: conftest.py
(+762 files in other folders)
