[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regs-checker"
version = "0.1.0"
description = "AI Legal Corpus: Regulatory obligation extraction, analysis, and serving platform"
requires-python = ">=3.11"
# RR7e — core runtime deps pinned to exact versions for reproducibility.
# To update: change the version here, run tests, then commit the diff.
# Dev/optional extras keep >= to avoid version conflicts across environments.
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.41",
    "alembic==1.15.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "boto3==1.38.23",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pyyaml==6.0.2",
    "python-multipart==0.0.20",
    "tenacity==9.1.2",
    "structlog==25.3.0",
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.10.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

